Fix collapsed bug on IE and old safari

--- a/src/assets/toolkit/styles/5-objects/_objects.layouts.scss
+++ b/src/assets/toolkit/styles/5-objects/_objects.layouts.scss
@@ -159,7 +159,11 @@
 
   body > .layout {
     display: flex;
-    height: 100%; // IE11 - Overbloated height fix
+    
+    //Content collapse fix for IE
+    @media all and ( -ms-high-contrast: none ), ( -ms-high-contrast: active ) {
+      height: 100%;
+    }
   }
 
   .sidebar {
